# ml-switzerland-accidents

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: review_bot.py
.github/workflows/: pr-review.yml
data/processed/: accidents_weather_aggregated.csv  bern_parking_summary.txt  dataset_summary.txt  frauenfeld_parking_ml_ready.csv  frauenfeld_parking_summary.txt  no2_air_quality_ml_ready.csv  no2_air_quality_summary.txt  uri_geodata_summary.txt
data/raw/: accident_template.csv  accidents_2020.csv  accidents_2021.csv  accidents_2022.csv  accidents_2023.csv  accidents_2024.csv  accidents_sample_2020-2021-2022-2023-2024.csv  bern_parking_aggregated.csv  bern_parking_raw.csv  weather_ZH,BE,LU,UR,SZ,OW,NW,GL,ZG,FR,SO,BS,BL,SH,AR,AI,SG,GR,AG,TG,TI,VD,VS,NE,GE,JU_2020-2021-2022-2023-2024.csv  weather_sample_2020-2021-2022-2023-2024.csv
data/raw/frauenfeld_parking/: frauenfeld_parking_raw.csv
data/raw/no2_air_quality/: no2_stations_2023.csv
docs/: build_from_scratch.md  learnign_roadmap.md  learning_resources.md
notebooks/: 00_learning_roadmap.ipynb  00_step_by_step_guide.ipynb  02_uri_geodata_exploration.ipynb
notebooks/.ipynb_checkpoints/: 00_learning_roadmap-checkpoint.ipynb  00_step_by_step_guide-checkpoint.ipynb  01_frauenfeld_parking_exploration-checkpoint.ipynb
resources/: swiss_cantons.json
src/data/: collect_accident_data.py  collect_bern_parking.py  collect_frauenfeld_parking.py  collect_no2_data.py  collect_uri_geodata.py  data_loader.py  download_real_data.py
src/models/: base_model.py
(+1 files in other folders)
