[project]
name = "ml-switzerland-accidents"
version = "0.1.0"
description = "Learn machine learning by building a model to predict car accidents in Swiss cantons based on weather data"
authors = [
    { name = "J" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.24.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "black>=24.0.0",
    "flake8>=7.1.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
      packages = ["src/"]

[tool.pyright]
venvPath = "."
venv = ".venv"
